added get all APIs for user, category
