# api/models/user.go
@@ -16,13 +16,18 @@ type User struct {
 }
 
 type CreateUserRequest struct {
-	FirstName       string  `json:"first_name"`
-	LastName        string  `json:"last_name"`
+	FirstName       string  `json:"first_name" binding:"required,min=2,max=30"`
+	LastName        string  `json:"last_name" binding:"required,min=2,max=30"`
 	PhoneNumber     *string `json:"phone_number"`
-	Email           string  `json:"email"`
-	Gender          *string `json:"gender"`
-	Username        string  `json:"username"`
+	Email           string  `json:"email" binding:"required,email"`
+	Gender          *string `json:"gender" binding:"oneof=male female"`
+	Username        string  `json:"username" binding:"required,min=2,max=30"`
 	ProfileImageUrl *string `json:"profile_image_url"`
-	Type            string  `json:"type"`
-	Password        string  `json:"password"`
+	Type            string  `json:"type" binding:"required,oneof=superadmin user"`
+	Password        string  `json:"password" binding:"required,min=6,max=16"`
+}
+
+type GetAllUsersResponse struct {
+	Users []*User `json:"categories"`
+	Count int32   `json:"count"`
 }
